# aws-agentcore-learning-hub

./: .gitignore  README.md
agentcore-evaluation/evaluation_02/: .bedrock_agentcore.yaml  1_test_local.ps1  2_build_push.ps1  Dockerfile  EVALUATION_STATUS_REPORT.md  README.md  __init__.py  agent.py  evaluation_results_quangphung-eval-session-20260201-183237_20260201_192831.json  evaluation_results_quangphung-eval-session-20260201-183237_20260201_193334.json  evaluation_results_quangphung-eval-session-20260201-183237_20260201_194354.json  on_demand_evaluation.py  requirements.txt  run_evaluation_simple.py  test_deployed.py  test_local.py
agentcore-runtime-agent/: README.md  invoke_agent_runtime.py
agentcore-runtime-agent/agent_pdz_01/: .gitignore  1_build_local.ps1  2_push_to_ecr.ps1  3_deploy_runtime.ps1  Dockerfile  agent.py  invoke_agent_local.py  pyproject.toml  requirements.txt
agentcore-runtime-agent/agent_pdz_02/: README.md
agentcore-runtime-agent/agent_pdz_02/agent/: 1_test_local.ps1  2_push_to_ecr.ps1  Dockerfile  README.md  __init__.py  agent.py  requirements.txt  test_deployed.py  test_local.py
agentcore-runtime-agent/agent_pdz_02/mcp_server/: 1_test_local.ps1  2_push_to_ecr.ps1  Dockerfile  README.md  mcp_server.py  test_deployed.py  test_local.py
